# build_with_ai

./: .gitignore  README.md  app_certs.sh  app_map.json  app_mapper.py  entry.sh  lint.sh  package-lock.json  package.json  pyproject.toml  setup.cfg  system_config_singlesourcetruth copy.md
certs/: ca.key  ca.srl
certs/api_gateway/: client.crt  client.csr  client.key
certs/ast_code_generator/: client.crt  client.csr  client.key
certs/client/: client.crt  client.csr  client.key
certs/constraint_relaxer/: client.crt  client.csr  client.key
certs/event-aggregator-mongodb/: certificate.crt  private.key
certs/evolution-analyzer-vector-db/: certificate.crt  private.key
certs/feedback_collector/: client.crt  client.csr  client.key
certs/grafana/: client.crt  client.csr  client.key
certs/incremental_synthesis/: client.crt  client.csr  client.key
certs/knowledge_base/: client.crt  client.csr  client.key
certs/language_interop/: client.crt  client.csr  client.key
certs/llm_volume/: client.crt  client.csr  client.key
certs/meta-learner-db/: certificate.crt  private.key
certs/meta_learner/: client.crt  client.csr  client.key
certs/neo4j-vector/: certificate.crt  private.key
certs/neural_code_generator/: client.crt  client.csr  client.key
certs/neural_interpretor/: client.crt  client.csr  client.key
certs/project-manager-db/: certificate.crt  private.key
certs/project_manager/: client.crt  client.csr  client.key
certs/prometheus/: client.crt  client.csr  client.key
certs/spec-registry-db/: certificate.crt  private.key
certs/spec_inference/: client.crt  client.csr  client.key
certs/spec_registry/: client.crt  client.csr  client.key
certs/specification_parser/: client.crt  client.csr  client.key
certs/synthesis_engine/: ca.crt  client.crt  client.csr  client.key
certs/template_discovery/: client.crt  client.csr  client.key
certs/template_lib_volume/: client.crt  client.csr  client.key
certs/verifier/: client.crt  client.csr  client.key
certs/version_manager/: client.crt  client.csr  client.key
certs/workflow-engine-db/: certificate.crt  private.key
certs/workflow_orchestrator/: client.crt  client.csr  client.key
certs/workflow_registry/: client.crt  client.csr  client.key
docker/: Dockerfile  docker-compose-all.yaml  docker-compose-api-gateway-dev.yaml  docker-compose-api-gateway.yaml  docker-compose-infra-dev.yml  docker-compose-monitor-dev.yaml  docker-compose-prometheus-grafana-prom.yaml  docker-compose-proxy-dev.yaml  docker-compose-pulsar-infra-db.yml
docs/: advanced_techniques.md  arch.md  completion_checklist.md  dataflow.md  datatree.md  explore_these.md  fish_tmux_cheatsheet.md  generate-db-certs.sh  logging_cheatsheet.md  neural_code_technique.md  reset-docker.sh  specsheets.md  ssot.md  still needs built  template.md  template_tree.md  templatecontext.md  workflow_phases.md
infra/: component_factory.py
infra/configs/: config.yaml  system_config.yaml
infra/docker/: compose-map.txt  (+10 more)
project_scripts/: BUILDtemplateandpulsar.sh  build.sh  build_lib.sh  cert.sh  deepseek.py  dockerdeploy.sh  eventanalyzer.sh  generate_certs_nginx.sh  generate_schemas.py  integratedin.sh  k8deployment.sh  mistral.py  orchestration.sh  registration.py  relationship_ana.sh  relationship_analyzer.sh  scaffold.sh  setup.sh  template_syn.sh  template_synthesizer.sh  templatenew.sh  tester.sh
src/: docker-compose.yaml  prompt
src/services/shared/shared-models/: README.md  pyproject.toml
src/services/shared/shared-models/src/shared_models/: __init__.py  base.py  constants.py  domain.py  enums.py  event_avro.py  events.py  messages.py  neural_mesh.py  projects.py  register_schemas.py  schema_registry.py  specifications.py  synthesis.py  telemetry.py  types.py  validator.py  z3_utils.py
src/services/shared/shared-models/tests/: event_avro_test.py  test_event_converter.py
(+284 files in other folders)
