[project]
name = "microservices-system-synthesizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.5.2",
    "aiohttp>=3.11.14",
    "aiokafka>=0.12.0",
    "astor>=0.8.1",
    "astpretty>=3.0.0",
    "astunparse>=1.6.3",
    "autopep8>=2.3.2",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "flash>=1.0.3",
    "ninja>=1.11.1.4",
    "numpy>=2.2.4",
    "peft>=0.15.1",
    "prometheus-client>=0.21.1",
    "protobuf>=6.30.2",
    "pulsar-client>=3.6.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pyyaml>=6.0.2",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.50.2",
    "uvicorn>=0.34.0",
    "bitsandbytes==0.42.0",
    "scipy==1.15.2",
    "colorama==0.4.6",
    "scipy==1.15.2",
    "python-dotenv>=1.1.0",
    "z3-solver>=4.14.1.0",
    "z3>=0.2.0",
    "pydantic-avro>=0.9.0",
    "docker>=7.1.0",
    "pydantic2avro>=0.4.1",
    "ruff>=0.11.9",
    "flake8>=7.2.0",
    "pip>=25.1.1",
    "setuptools>=80.4.0",
    "asyncpg>=0.30.0",
]


[tool.black]
line-length = 120
target-version = ["py3.10"]